fix scrollbar 2

--- a/src/component/Listing.css
+++ b/src/component/Listing.css
@@ -1,10 +1,9 @@
 .listing {
   background-color: #ffffff;
-  width: 510px;
+  width: 516px;
   height: 124px;
   margin-bottom: 24px;
-  margin-left: auto;
-  margin-right: 8px;
+  margin-left: 20px;
   padding: 18px;
   border-radius: 25px;
 }
