--- a/src/component/ListingCards.css
+++ b/src/component/ListingCards.css
@@ -5,7 +5,7 @@
   border-radius: 26px;
   display: flex;
   flex-direction: column;
-  padding-right: 18px;
+  padding-right: 16px;
 }
 
 .listings {
